--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "i18n": "^0.15.1",
     "pinia": "^2.1.7",
     "postcss": "^8.4.35",
     "vue": "^3.4.15",
+    "vue-i18n": "^9.9.1",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
