--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "i18n": "^0.15.1",
+    "luxon": "^3.4.4",
     "pinia": "^2.1.7",
     "postcss": "^8.4.35",
     "vue": "^3.4.15",
