--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "i18n": "^0.15.1",
     "luxon": "^3.4.4",
     "pinia": "^2.1.7",
