--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "file-saver": "^2.0.5",
     "i18n": "^0.15.1",
+    "js-cookie": "^3.0.5",
     "luxon": "^3.4.4",
     "pinia": "^2.1.7",
     "postcss": "^8.4.35",
@@ -25,6 +27,8 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
+    "@types/file-saver": "^2.0.7",
+    "@types/js-cookie": "^3.0.6",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.11.10",
     "@vitejs/plugin-vue": "^5.0.3",
